<resources>
    <string name="app_name">Asset Tagging</string>
    <string name="asset_tagging">Asset Tagging</string>
    <string name="enter_user_name">Enter User Pin</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="failure">Failure</string>
    <string name="something_bad_happened">Something went wrong. Please try again…</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="ScheduleDes">Schedule Description:</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="no_data_found">No Data Found</string>
    <string name="daily_schedule">Activity Schedules</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="userPin">User Pin</string>
    <string name="IPaddress">IP Address</string>
    <string name="enterIPaddress">Enter IP Address</string>
    <string name="port">Port Number</string>
    <string name="enter_user_port">Enter Port Number</string>
    <string name="password">Password</string>
    <string name="emailAddress">Email Id</string>
    <string name="resetPassword">Reset Password</string>
    <string name="emailSentSuccessFully">Email Sent Successfully</string>
    <string name="updateIpadd">Update IP Address</string>
    <string name="enter_email_id">Enter User Name or Email Id</string>
    <string name="enter_valid_email">Enter Valid Email Address</string>
    <string name="activityType">Activity Type</string>
    <string name="employeename">Employee Name</string>
    <string name="Location">Location</string>
    <string name="pleaseScanBarcode">Please Scan QR Code</string>
    <string name="datasavedsuccessfully">Data Saved Successfully</string>
    <string name="checkin">CheckIn</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fill_old_pass">Fill Old Password</string>
    <string name="fill_new_password">Fill New Password</string>
    <string name="fill_confirm_pass">Fill Confirm Password</string>
    <string name="password_not_motached">Password Does not Match</string>
    <string name="username">User Name</string>
    <string name="enter_user_nameoremail">Enter User name or Email Id</string>
    <string name="usernameoremail">User Name or Email Id</string>
    <string name="assetid">Asset Id:</string>
    <string name="tracking">Tracking</string>
    <string name="status">Status:</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="scheduleID">Schedule ID:</string>
    <string name="scheduleLocations">Schedule Locations</string>
    <string name="locations">Locations</string>
    <string name="Completed">Completed</string>
    <string name="ongoing">OnGoing</string>
    <string name="upcomung">UpComing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkStatusOfAsset">Please Confirm the Status of Asset</string>
    <string name="total_task">Total Schedules</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="inspection">Inspection: </string>
    <string name="normal">Normal</string>
    <string name="tagging">Tagging</string>
    <string name="chanhge_theme">Change Theme</string>
    <string name="theme">Themes</string>
    <string name="assetDisposer">Asset Disposal</string>
    <string name="addnew">Add New</string>
    <string name="addDescription">Add Schedule Description</string>
    <string name="addSchedule">Add Schedule</string>
    <string name="dateofdisposal">Date of Disposal</string>
    <string name="Des">Description:</string>
    <string name="dateofDisposal">Date of Disposal</string>
    <string name="yetToStarted">Yet to Submit</string>
    <string name="filter">Filter</string>
    <string name="createdon">Created On</string>
    <string name="tagupdate">Update Tag</string>
    <string name="asset_id">Asset Id</string>
    <string name="asset_name">Asset Name:</string>
    <string name="submit">Submit</string>
    <string name="project_name">Project Name:</string>
    <string name="projectid">Project Id:</string>
    <string name="tag">Tag</string>
    <string name="barcode">QR Code</string>
    <string name="updateTag">Update Tag Number</string>
    <string name="tagnumber">Tag Number</string>
    <string name="existing">Existing</string>
    <string name="clearall">Clear All Filter</string>
    <string name="scanExistingTag">Scan Existing Tag</string>
    <string name="scanNewTag">Scan New Tag</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="activity_type">Activity Type</string>
    <string name="scan_new_qr_code">Scan New QR Code</string>
    <string name="locationid">Location Id:</string>
    <string name="locattionName">Location Name:</string>
    <string name="AssetGroupid">Asset Group Id:</string>
    <string name="AssetGroupname">Asset Group Name:</string>
    <string name="project">Project</string>
    <string name="AssetGroup">Asset Group</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="search">Search</string>
    <string name="selectfinacialres">Select Financial Dimension</string>
    <string name="addAsset">Add Assets</string>
    <string name="addnewassets">Add New Assets</string>
</resources>