<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/offwhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background_not_round"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/edt_oldnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background_not_round"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/edt_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background_not_round"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="13dp" />

    <com.assettagging.view.custom_control.Custom_Button
        android:id="@+id/tv_changepassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="14dp" />
</LinearLayout>