<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/offwhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentBlue"
        android:drawableRight="@mipmap/ic_dialog_close_normal_holo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccentBlue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/addSchedule"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/imageViewCross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@mipmap/ic_dialog_close_normal_holo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/offwhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ScheduleDes"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_background_not_round_blue"
            android:gravity="left"
            android:hint="@string/addDescription"
            android:maxLines="3"
            android:nextFocusDown="@id/textViewStartDate"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/offwhite"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/offwhite"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateofdisposal"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textViewStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_background_not_round_blue"
                    android:hint="@string/dateofdisposal"
                    android:nextFocusDown="@id/buttonSubmit"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>


        </LinearLayout>

        <com.assettagging.view.custom_control.Custom_Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background_blue"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>